--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux": "^3.6.0",
-    "gh-pages": "^3.2.3",
     "axios": "^0.21.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -50,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "deploy": "^1.0.3",
+    "run": "^1.4.0"
   }
 }
